# android_sh_p

MobileCheckSH/app/: build.gradle
MobileCheckSH/app/src/main/: AndroidManifest.xml
MobileCheckSH/app/src/main/jni/: Android.mk  Application.mk  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  H264Android.c  NetEncoder.h  adpcm.c  avcodec.h  camera.h  common.h  config.h  jniLog.h  netencoder.cpp  proto.h  utils.c
MobileCheckSH/app/src/main/jni/common/: rectangle.h
MobileCheckSH/app/src/main/res/anim/: rotate_down.xml  rotate_up.xml
MobileCheckSH/app/src/main/res/color/: skin_camera_text.xml  tableview_text_color_selector.xml
MobileCheckSH/app/src/main/res/drawable/: background_view_rounded_bottom.xml  background_view_rounded_container.xml  background_view_rounded_middle.xml  background_view_rounded_single.xml  background_view_rounded_top.xml  button_bg.xml  default_edittext_no_shape.xml  default_edittext_shape.xml  frag_radius_halftrans.xml
MobileCheckSH/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_waiting.xml  app_about.xml  bottombar_layout.xml  camera_control.xml  camera_control_zoom_layout.xml  camera_mian.xml  camera_setting.xml  camera_title_control.xml  camera_zoom_setting_item.xml  dialog_newtask.xml  fix_net.xml  item_currenttask_deal.xml  item_currenttask_wait.xml  ref2.xml  refresh_bar.xml  ui_titlebar.xml  view_address.xml  view_curtask.xml  view_histask.xml  view_message.xml
MobileCheckSH/gradle/wrapper/: gradle-wrapper.properties
MobileCheckSH/uikit/: build.gradle
(+142 files in other folders)
